apps/base/media/bazarr/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: artifactory.local.hejsan.xyz/docker/linuxserver/bazarr:1.5.3@sha256:750251d7dcf245d05ad6b2b0c39685282df43a8582875fa31ab2a9328af64e26
          ports:
            - containerPort: 6767
              name: http
          volumeMounts:
            - name: bazarr-config-pvc
              mountPath: /config
            - name: shared-storage
              mountPath: /mnt/storage
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
            requests:
              memory: 320Mi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-nfs-pvc
  volumeClaimTemplates:
    - metadata:
        name: bazarr-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 5Gi
