apps/base/media/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      targetPort: 6767
      port: 6767
