apps/base/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: bazarr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
